--- a/HomePage.html
+++ b/HomePage.html
@@ -27,13 +27,123 @@
 			<div class="collapse navbar-collapse" id="Navbar">
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-commenting fa-lg" aria-hidden="true"></span> About Us</a></li>
-					<li class="nav-item"><a class="nav-link" href="./Hiring Managers.html"><span class="fa fa-user-o fa-lg"></span> Hiring Managers</a></li>
-					<li class="nav-item"><a class="nav-link" href="./Talent.html"><span class="fa fa-gavel fa-lg"></span> Attorney Talent</a></li>
-					<li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-address-envelope-o fa-lg"></span> Connect with us!</a></li>
+					<li class="nav-item"><a class="nav-link" href="./HiringManagers.html"><span class="fa fa-user-o fa-lg"></span> HiringManagers</a></li>
+					<li class="nav-item"><a class="nav-link" href="./AttorneyTalent.html"><span class="fa fa-gavel fa-lg"></span> Attorney Talent</a></li>
+					<li class="nav-item" id="Connect"><a class="nav-link" href="#"><i class="fa fa-handshake-o" aria-hidden="true"></i> Connect with us!</li>
 				</ul>
+				<span class="navbar-text">
+					<button type="button" class="btn btn-secondary-outline" id="Login"><i class="fa fa-sign-in" aria-hidden="true"></i>Login</button>
+				</span>
 			</div>
 		</div>
 	</nav>
+	
+	<!--Connect with us form -->
+	<div id="ConnectModal" class="modal fade" role="dialog"> 
+		<div class="modal-dialog" role="contentinfo">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h4 class="modal-title">Connect with us!</h4>
+					<button type="button" class="close"
+					data-dismiss="modal">
+				&times;
+				</button>
+				</div>
+			
+				
+				<div class="modal-body">
+					<form class="form-horizontal">
+						<div class="form-group row">
+							<label for="firstname" class="col-md-2 col-form-label"> First Name</label>
+							<div class="col-md-10">
+								<input type="text" class="form-control" id="firstname" name="firstname"
+									placeholder="First Name">
+							</div>				
+						</div>
+						<div class="form-group row">
+							<label for="lastname" class="col-md-2 col-form-label"> Last Name</label>
+							<div class="col-md-10">
+								<input type="text" class="form-control" id="lastname" name="lastname"
+									placeholder="Last Name">
+							</div>
+						</div>
+						<div class="form-group row">
+							<label for="telnum" class="col-md-2 col-form-label"> Telephone Number</label>
+							<div class="col-7 col-sm-6 col-md-7">
+								<input type="tel" class="form-control" id="telnum" name="telnum"
+									placeholder="555-555-5555">
+							</div>
+						</div>
+						<div class="form-group row">
+							<label for="emailid" class="col-md-2 col-form-label"> Email</label>
+							<div class="col-md-10">
+								<input type="email" class="form-control" id="emailid" name="emailid"
+									placeholder="youremail@domain.com">
+							</div>
+						</div>
+						<div class="form-group row">
+							<div class="form-check col-md-6 offset-md-2">
+								<label class="form-check-label">
+									<input type="checkbox" class="form-check-input"
+										name="approve" value="">
+										<strong>Yes, please sign me up to NewsteadLegal's list serve.</strong>
+								</label>
+							</div>
+			
+						</div>
+						<div class="form-group row">
+							<label for="questions" class="col-md-2 col-form-label"> Questions/<br>Comments</label>
+							<div class="col-md-10">
+								<textarea class="form-control" id="feedback" name="feedback"
+									rows="12"></textarea>
+							</div>
+						</div>
+						<div class="form-group row">
+							<div class="offset-md-2 col-md-10">
+								<button type="submit" class="btn btn-secondary-outline">Submit My Contact Information</button>
+							</div>
+						</div>
+					</form>
+				</div>
+			</div>								
+		</div>
+	</div>
+	
+	<!--Login form -->
+	<div id="loginModal" class="modal fade" role="dialog">
+		<div class="modal-dialog" role="contentinfo">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h4 class="modal-title">Login</h4>
+					<button type="button" class="close"
+						data-dismiss="modal">
+					&times;
+					</button>
+				</div>
+				<div class="modal-body">
+					<form class="form-inline">
+						<div class="form-group">
+							<label class="sr-only" for="exampleInputEmail3">Email address</label>
+							<input type="email" class="form-control form-control-sm mr-1" id="exampleInputEmail3" placeholder="Enter email">
+						</div>
+						<div class="form-group">
+							<label class="sr-only" for="exampleInputPassword3">Password</label>
+							<input type="password" class="form-control form-control-sm mr-1" id="exampleInputPassword3" placeholder="Password">
+						</div>
+						<div class="form-check">
+							<label class="form-check-label">
+								<input class="form-check-input" type="checkbox"> Remember me
+							</label>
+						</div>
+					</form>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Cancel</button>
+					<button type="submit" class="btn btn-primary btn-sm">Sign in</button>
+				</div>
+			</div>
+		</div>
+	</div>
 	
 	<header class="jumbotron">
         <div class="container">
@@ -97,17 +207,17 @@
    
 
     <footer class="footer">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">             
-                  <div class="col-12 col-sm-6">
+                <div class="col-12 col-sm-6">
                     <h5>Our Address</h5>
                     <address>
 		              1234 Anywhere Lane, Success, California, 56789 USA <br>
 		              <i class="fa fa-phone fa-lg"></i>: (123) 456-7890  | <i class="fa fa-fax fa-lg"></i>: (123) 456-7891  | 		              <i class="fa fa-envelope fa-lg"></i>: <a href="mailto:confusion@food.net"> info@newsteadlegal.com</a>
 		           </address>
                 </div>
-                <div class="col-12 col-sm-6 align-right">
-                    <div style="text-align: center">
+                <div class="col-12 col-sm-6 align-items-right">
+                    <div>
                         <a class="btn btn-social-icon btn-google-plus" href="http://google.com/+"><i class="fa fa-google-plus"></i></a>
                         <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook"></i></a>
                         <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"><i class="fa fa-linkedin"></i></a>
@@ -118,7 +228,7 @@
                 </div>
            </div>
            <div class="row justify-content-center">             
-                <div class="col-12 col-sm-3">
+                <div class="col">
 					<p>© Copyright 2017 Newstead Legal. All rights reserved. Website designed by EMFH.</p>
    				</div>	
 				<div class="col-2">
