--- a/AttorneyTalent.html
+++ b/AttorneyTalent.html
@@ -11,7 +11,7 @@
 	<!-- build:css css/main.css -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/styles.css">
-	<link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
+	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/fonts/fontawesome-webfont.eot?v=4.1.0">
 	<link rel="stylesheet" href="css/bootstrap-social.css">
 	<!-- endbuild -->
 	<title>Newstead Legal</title>
